2003-01-16  Sam Steingold  <sds@gnu.org>

	do not bind slot names (which may be special variables) in keyword
	constructors
	* defstruct.lisp: DS-SLOT vector now has a new slot - VAR
	(make-ds-slot): init VAR
	(ds-slot-var): new function
	(ds-make-constructor-body): accept a GET-VAR argument
	(ds-make-boa-constructor): pass #'DS-SLOT-NAME to
	ds-make-constructor-body
	(ds-make-keyword-constructor): pass #'DS-SLOT-VAR to
	ds-make-constructor-body

2003-01-14  Stefan Kain  <stefan.kain@freenet.de>

	* defstruct.lisp: translated all comments

2003-01-14  Sam Steingold  <sds@gnu.org>

	* defstruct.lisp (ds-make-constructor-body): optimize LIST
	structures just like the VECTOR ones

2003-01-12  Sam Steingold  <sds@gnu.org>

	* spvw_typealloc.d (reallocate_small_string): do not create the
	hole (and do not plug it) because both this object and the
	possible hole/plug will be collected during the next GC

2003-01-09  John  Hinsdale <hin@alma.com>

	* modules/fastcgi/*: new add-in module for FastCGI interface

2003-01-09  Sam Steingold  <sds@gnu.org>

	implemented CHANGE-CLASS and UPDATE-INSTANCE-FOR-DIFFERENT-CLASS
	* clos.lisp (change-class, update-instance-for-different-class):
	implemented
	* init.lisp (change-class, update-instance-for-different-class):
	export
	* constsym.d, subr.d (pchange_class): added
	* lispbibl.d (Rectype_realloc_Instance): new record type
	(instance_un_realloc): new macro
	(instancep): handle Rectype_realloc_Instance
	(instanceof): make into a function and call instance_un_realloc()
	(case_Rectype_Instance_above): include Rectype_realloc_Instance
	* hashtabl.d (sxhash_atom): un_realloc instances
	* predtype.d (TYPE-OF, CLASS-OF): ditto
	* spvw_garcol.d (GC_MARK, down_record): ditto
	* io.d (pr_orecord): handle Rectype_realloc_Instance
	* record.d (class_of, ptr_to_slot): make into a function and call
	instance_un_realloc()
	(%CHANGE-CLASS): implemented

2003-01-08  Sam Steingold  <sds@gnu.org>
